<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.6">
  <DUT Name="ST_ParamTCP" Id="{6b95cda4-843b-4ac7-bc72-7b92a809ac44}">
    <Declaration><![CDATA[TYPE ST_ParamTCP :
STRUCT
	sRemoteHost : T_IPV4Addr;
	nRemotePort : UDINT;
	tTimeout: TIME;
	xConnected : BOOL;			//TRUE if currently Connected to a Server
	hSocket : T_HSOCKET;		//saves the connection details after the first Connection
	xCognexMode : BOOL;			//login in into an cognex Camera
	sCognexUser: STRING;
	sCognexPW: STRING;
	xConnectedCognex: BOOL;		//connection to Cognex etablished
	NetID :  T_AmsNetId;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>