<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.6">
  <POU Name="FB_TCP" Id="{4b1b7a1f-ef81-4f06-8a09-5c3e603fef73}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_TCP
VAR_INPUT
	xConnect : BOOL;
	sRemoteHost : T_IPV4Addr :='127.0.0.1';
	nRemotePort : UDINT := 23;
	tTimeout: TIME := T#15S;
	xDisconnect : BOOL;
END_VAR
VAR_OUTPUT
	xBusy: BOOL;
	xError: BOOL;
	nErrID : UDINT;
	hSocket : T_HSOCKET;
END_VAR
VAR
	fbConnect : FB_SocketConnect;

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbConnect.bExecute:=xConnect;
fbConnect.sRemoteHost:=sRemoteHost;
fbConnect.nRemotePort:=nRemotePort;
fbConnect.tTimeout:=tTimeout;
fbConnect();
xBusy:=fbConnect.bBusy;
xError:=fbConnect.bError;
nErrID:=fbConnect.nErrId;
hSocket:=fbConnect.hSocket;

]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>